package cook;

import "msg_id.proto";

option optimize_for = LITE_RUNTIME;
option java_package = "netty.framework.messages";
option java_outer_classname = "TestMessage";

message TestRequest {
    required MsgID  msgID    = 1; 
	optional int32	data1	 = 2;
	optional int32	data2	 = 3;
}

message TestResponse {
    required MsgID      msgID    = 1;
	optional int32		data1	 = 2;
	optional int32		data2	 = 3;
}

// 测试 OuterTest getTestRequestBuilder 
message OuterTest {
	optional TestRequest request = 1;
}